@startuml
'https://plantuml.com/class-diagram



User "1" *-- "*" Role

Car "1" o-- "1" Brand
Car "1" *-- "1" QualityClass

CarBrand "1" *-- "1" Model


Car <|-- RentableCar
Brand <|-- CarBrand
Model <|-- CarModel

class User {
-int id
-String login
-String password
}

interface Car {
-int id
-String name
-String getFullName()
}

class RentableCar {
-BigDecimal rentPrice
}

interface Brand {
-String name
}

interface Model {
-String name
}

enum Role {
USER
ADMIN
MANAGER
}

enum QualityClass {
AFFORDABLE
DECENT
ELITE
}

@enduml